[package]
name = "bvh_anim"
version = "0.4.0"
authors = ["George Burton <burtonageo@gmail.com>"]
repository = "https://github.com/burtonageo/bvh_anim"
documentation = "https://docs.rs/bvh_anim/"
readme = "Readme.md"
edition = "2018"
description = "A .bvh file parser"
keywords = ["bvh", "biovision", "parser", "animation", "skeletal"]
categories = ["rendering::data-formats"]
license = "MIT"
exclude = ["./fuzz", "./data"]

[dependencies]
anyhow = "1"
bstr = "1.8.0"
smallvec = "1.5"
